Modified files describing project

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,11 @@
+b1_timing
+/*
+Francesco Pancaldi 2016
+fpancald@nd.edu
+*/
+
+Bertini1/bertini_real/b2
+/*
 Daniel Brake
 danielthebrake@gmail.com
 
@@ -15,3 +23,4 @@ sommese@nd.edu
 
 Charles Wampler
 charles.w.wampler@gm.com
+*/
